# systemtap

./: .gitignore  AUTHORS  Android.mk  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  buildrun.cxx  cache.cxx  cmdline.cxx  cmdline.h  config.in  configure  configure.ac  csclient.cxx  dtrace.1  dtrace.in  dwarf_wrappers.h  dwflpp.cxx  dwflpp.h  elaborate.cxx  elaborate.h  git_version.sh  hash.cxx  hash.h  loc2c-test.c  loc2c.c  main.cxx  nsscommon.cxx  parse.cxx  parse.h  privilege.cxx  remote.cxx  run-stap.in  session.cxx  session.h  stap-report  stap-server.conf  stap-server.service  (+27 more)
android/: glob.c  stapify
android/elfutils/: libdw.h  libdwfl.h  version.h
android/host/: config.h  sdt-config.h
doc/: Makefile.in  langref.tex  tutorial.tex
doc/SystemTap_Tapset_Reference/: Makefile.in  dummy-tapsets.xml  manpager  tapcheck.sh  tapsets.tmpl
doc/beginners/: Makefile.in
emacs/: systemtap-init.el  systemtap-mode.el
initscript/: README.stap-server  config.stap-server.in  config.systemtap.in  systemtap.in
man/: CHECK_ERRWARN_MANPAGES.sh  Makefile.am  Makefile.in  error::buildid.7stap  error::dwarf.7stap  error::fault.7stap  error::inode-uprobes.7stap  error::pass1.7stap  error::pass2.7stap  error::pass3.7stap  error::pass4.7stap  error::pass5.7stap  error::process-tracking.7stap  error::reporting.7stap  stap.1  stappaths.7.in  stapprobes.3stap  warning::debuginfo.7stap  warning::process-tracking.7stap
po/: POTFILES.in  en.gmo  en.po  fr.gmo  fr.po  pl.gmo  pl.po  systemtap.pot
re2c-migrate/: Makefile.am  Makefile.in  README  actions.cc  code.cc  code.h  dfa.cc  globals.cc  globals.h  re.h  re2c-dfa.cxx  re2c-dfa.h  re2c-emit.cxx  re2c-globals.cxx  re2c-globals.h  re2c-regex.cxx  re2c-regex.h  regcomp.cxx  regcomp.h  regtest.cxx  regtranslate.cc  scanner.h  stapregex.cxx  stapregex.h  substr.cc  token.h  translator_output_STANDALONE.cxx  util_STANDALONE.cxx
re2c-migrate/regcomp.base/: regtest.exp  regtest.in.0  regtest.in.1
runtime/: common_probe_context.h  copy.c  k_syms.h  loc2c-runtime.h  map-gen.c  map-stat.c  map.c  map.h  pmap-gen.c  procfs-probes.c  regs.c  regs.h  runtime.h  runtime_defines.h  stack.c  stat-common.c  stat.c  stat.h  stp_string.c  stp_string.h  stp_task_work.c  stp_utrace.c  stp_utrace.h  string.h  sym.c  sym.h  task_finder_vma.c  time.c  unwind.c  vma.c  vsprintf.c
runtime/dyninst/: addr-map.c  alloc.c  arith.c  common_probe_context.h  common_session_state.h  copy.c  debug.h  ilog2.h  io.c  linux_defs.h  linux_types.h  loc2c-runtime.h  map_list.h  map_runtime.h  offptr.h  offset_list.h  print.c  print.h  probe_lock.h  regs.c  runtime.h  runtime_context.h  runtime_defines.h  shm.c  stapdyn.h  stat.c  stat_runtime.h  string.c  sym.c  timer.c  tls_data.c  uprobes-dyninst.c  uprobes.c  uprobes.h  vsprintf.c
runtime/linux/: addr-map.c  alloc.c  autoconf-inode-uprobes-noaddr.c  autoconf-inode-uretprobes.c  autoconf-utrace-via-tracepoints.c  common_session_state.h  copy.c  debug.h  io.c  loc2c-runtime.h  map_list.h  map_runtime.h  perf.c  perf.h  print.c  probe_lock.h  regs.c  runtime.h  runtime_context.h  stat_runtime.h  task_finder.c  task_finder2.c  task_finder_map.c  task_finder_stubs.c  timer.c  uprobes-common.c  uprobes-common.h  uprobes-inode.c
runtime/staprun/: configure  configure.ac
runtime/transport/: symbols.c  transport.c
runtime/unwind/: unwind.h
scripts/: spin-rawhide  update-docs
stapdyn/: Makefile.am  Makefile.in  README  TODO  dynprobe.cxx  dynprobe.h  dynsdt.cxx  dynutil.cxx  dynutil.h  mutatee.cxx  mutatee.h  mutator.cxx  mutator.h  stapdyn.cxx
staprun/: Android.mk  Makefile.am  Makefile.in  common.c  configure.ac  ctl.c  mainloop.c  modverify.c  relay.c  relay_old.c  run-staprun.in  stapio.c  staprun.c  staprun.h  staprun_funcs.c  stapsh.c
tapset/: DEVGUIDE  ansi.stp  context-caller.stp  context.stp  errno.stp  logging.stp  nd_syscalls.stp  nd_syscalls2.stp  panic.stp  registers.stp  string.stp  syscalls.stp  syscalls2.stp  tokenize.stp  uconversions.stp
tapset/arm/: registers.stp
tapset/dyninst/: context-envvar.stp  context.stp  ctime.stp
tapset/i386/: registers.stp
tapset/linux/: aux_syscalls.stp  context-caller.stp  context-symbols.stp  context-unwind.stp  context.stp  context.stpm  conversions.stp  ctime.stp  dentry.stp  inet_sock.stp  ioblock.stp  ioscheduler.stp  ip.stp  ipmib.stp  irq.stp  logging.stp  memory.stp  nd_syscalls.stp  nd_syscalls2.stp  netfilter.stp  networking.stp  nfs.stp  nfs_proc.stp  nfsd.stp  panic.stp  rpc.stp  scheduler.stp  scsi.stp  signal.stp  socket.stp  syscalls.stp  syscalls2.stp  task.stp  tcp.stp  tcpmib.stp  tty.stp  ucontext-symbols.stp  ucontext-unwind.stp  ucontext.stp  uconversions.stp  (+2 more)
tapset/powerpc/: registers.stp
tapset/s390/: registers.stp
tapset/x86_64/: registers.stp
testsuite/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
testsuite/buildok/: alias_suffixes01.stp  alias_suffixes02.stp  alias_suffixes03.stp  alias_suffixes04.stp  alias_suffixes05.stp  alias_suffixes06.stp  aux_syscalls-embedded.stp  cmdline01.stp  context-symbols-embedded.stp  conversions-embedded.stp  conversions.stp  dw_op_rot.stp  fortyeight.stp  fortyseven.stp  fortytwo.stp  globals.stp  guru.stp  inet_sock-embedded.stp  nd_syscalls-arch-detailed.stp  nd_syscalls-detailed.stp  nd_syscalls2-detailed.stp  nfs-detailed.stp  oldlocals01.stp  oldlocals02.stp  scsi-detailed.stp  signal-detailed.stp  signal-handle.stp  syscalls-arch-detailed.stp  syscalls-detailed.stp  syscalls2-detailed.stp  systemtap_privilege.stp  thirtythree.stp  thirtytwo.stp  ucontext-symbols-embedded.stp  vfs-detailed.stp  vfs-embedded.stp  xtime.stp
testsuite/lib/: compile_flags.exp  stap_run.exp  stap_run2.exp  stap_run_binary.exp  stap_run_exact.exp  systemtap.exp
testsuite/parseko/: at_operators.stp  bad_tapset.stp  cmdline02.stp  cmdline03.stp  cmdline04.stp  cmdline06.stp  cmdline07.stp  cmdline08.stp  cmdline15.stp  cmdline22.stp  deprecated01.stp  fiftyone.stp  foreachstmt08.stp  foreachstmt09.stp  macros01.stp  macros02.stp  macros03.stp  macros04.stp  macros05.stp  macros06.stp  (+19 more)
(+338 files in other folders)
